Compiler/tests/semantics/success/instancia_clase_Object.java
// Ahora se pueden crear correctamente objetos de tipo dinamico object.

class Test {
	static void main()
	var Object x;
	{
		x = new Object();
	}
}