Compiler/tests/semantics/fail/numero_linea_correcto_error_if.java
// Ahora se muestra correctamente el numero de linea en los errores de las sentencias if.

class Test {
	static void main()
	{
		if ("will fail") {
		
		}
	}
}